test/Fail/Issue4631.err
Issue4631.agda:10.12-13: error: [UnequalTerms]
R0 != R1
when checking that all occurrences of pattern variable x have the
same type
